[BlackBerry] Invalid use of COMPILE_ASSERT macro in WebKitTextCodec.cpp https://bugs.webkit.org/show_bug.cgi?id=110437

Patch by Carlos Garcia Campos <cargarcia@rim.com> on 2013-02-21
Reviewed by Yong Li.

* Api/WebKitTextCodec.cpp:
(WebKit): Define COMPILE_ASSERT_MATCHING_ENUM() macro and use it to
check enum values match between WebKit and WTF.
(BlackBerry::WebKit::base64Decode): Use a static cast directly to
convert from WebKit Base64DecodePolicy to WTF.
(BlackBerry::WebKit::base64Encode): Use a static cast directly to
convert from WebKit Base64EncodePolicy to WTF.

Canonical link: https://commits.webkit.org/128749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143599 268f45cc-cd09-0410-ab3c-d52691b4dbfc